# hermalog

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: sample.py  sample1.py  sample2.py  sample3.py  sample4.py  sample5.py
src/hermalog/: __init__.py  configurations.py  customLogging.py  hermalog.py  loggingBasic.py  simpleLogging.py
tests/: test_sample1.py  test_sample2.py  test_sample3.py  test_sample4.py  test_sample5.py
