[project]
name = "hermalog"
version = "0.1.0"
description = "A simple logging library for Python"
authors = [
    { name = "Chinmay Shah", email = "hi@chinmayshah.xyz" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hermalog"]
